[package]
name = "cargo-generate-template-nostd-heapless"
version = "0.1.0"
edition = "2021"

[dependencies]
# heapless = { version = "0.8.0", features = ["serde", "portable-atomic", "ufmt"] }
heapless = { version = "0.8.0", features = [] }
# libc = { version = "0.2.158", default-features = false }
libc-print = "0.1.23"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

